Added deployment details for PAS/PWS.